# RuleMonkey

./: CHANGELOG.md  CMakeLists.txt
cpp/rulemonkey/: engine.cpp  engine.hpp  engine_profile.hpp  pattern_parser.cpp  pattern_parser.hpp  simulator.cpp
docs/: species_format.md
include/rulemonkey/: simulator.hpp
tests/: CMakeLists.txt
tests/cpp/: pattern_parser_test.cpp  species_enumeration_test.cpp  species_methods_test.cpp
